--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-  "private":"true",
+  "private": true,
   "name": "vue3_mine",
-  "packageManager": "pnpm@7.26.2",
+  "packageManager": "pnpm@8.6.2",
   "type": "module",
-  "version": "1.0.0",
+  "version": "3.0.0",
   "description": "imitation of Vue3-core",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node scripts/dev.js",
+    "build": "node scripts/build.js"
   },
   "keywords": [],
+  "engines": {
+    "node": ">=16.11.0"
+  },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "esbuild": "^0.17.4",
+    "minimist": "^1.2.0",
+    "prettier": "^2.7.1"
+  }
 }
