--- a/package.json
+++ b/package.json
@@ -12,15 +12,6 @@
     "format-check": "prettier --check --cache --parser typescript \"**/*.[tj]s?(x)\""
   },
   "keywords": [],
-  "lint-staged": {
-    "*.{js,json}": [
-      "prettier --write"
-    ],
-    "*.ts?(x)": [
-      "eslint",
-      "prettier --parser=typescript --write"
-    ]
-  },
   "engines": {
     "node": ">=16.11.0"
   },
@@ -29,6 +20,8 @@
   "devDependencies": {
     "esbuild": "^0.17.4",
     "minimist": "^1.2.0",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "vite": "^4.3.0"
+    
   }
 }
