optimize the shared package

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,5 +4,16 @@
   "description": "internal utils shared across @vue packages",
   "main": "index.js",
   "module": "dist/shared.esm-bundler.js",
-  "types": "dist/shared.d.ts"
+  "types": "dist/shared.d.ts",
+  "files": [
+    "index.js",
+    "dist"
+  ],
+  "sideEffects": false,
+  "buildOptions": {
+    "formats": [
+      "esm-bundler",
+      "cjs"
+    ]
+  }
 }
