add more support

--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/parser": "^7.21.3",
+    "@rollup/plugin-json": "^5.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "chalk": "^4.1.0",
+    "magic-string": "^0.30.0",
+    "rollup": "^3.26.0",
+    "execa": "^4.0.2",
+    "rollup-plugin-typescript2": "^0.34.1",
     "esbuild": "^0.17.4",
     "esbuild-plugin-polyfill-node": "^0.2.0",
     "minimist": "^1.2.0",
