--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/parser": "^7.21.3",
     "@rollup/plugin-json": "^5.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@vue/consolidate": "0.17.3",
     "chalk": "^4.1.0",
     "magic-string": "^0.30.0",
     "rollup": "^3.26.0",
