--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/parser": "^7.21.3",
+    "@rollup/plugin-alias": "^4.0.3",
+    "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^5.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@vue/consolidate": "0.17.3",
@@ -27,6 +29,8 @@
     "rollup": "^3.26.0",
     "execa": "^4.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
+    "rollup-plugin-esbuild": "^5.0.0",
+    "rollup-plugin-polyfill-node": "^0.12.0",
     "esbuild": "^0.17.4",
     "esbuild-plugin-polyfill-node": "^0.2.0",
     "minimist": "^1.2.0",
