--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "node scripts/dev.js",
     "build": "node scripts/build.js",
+    "build-dts": "tsc -p tsconfig.build.json && rollup -c rollup.dts.config.js",
     "format": "prettier --write --cache --parser typescript \"**/*.[tj]s?(x)\"",
     "format-check": "prettier --check --cache --parser typescript \"**/*.[tj]s?(x)\""
   },
@@ -23,6 +24,8 @@
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^5.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@rollup/plugin-terser": "^0.4.0",
     "@vue/consolidate": "0.17.3",
     "chalk": "^4.1.0",
     "magic-string": "^0.30.0",
@@ -37,6 +40,5 @@
     "prettier": "^2.7.1",
     "typescript": "^5.1.6",
     "vite": "^4.3.0"
-    
   }
 }
