--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "@vue/consolidate": "0.17.3",
     "chalk": "^4.1.0",
     "magic-string": "^0.30.0",
-    "rollup": "^3.26.0",
     "execa": "^4.0.2",
+    "puppeteer": "~19.6.0",
+    "rollup": "^3.26.0",
     "rollup-plugin-typescript2": "^0.34.1",
     "rollup-plugin-esbuild": "^5.0.0",
     "rollup-plugin-polyfill-node": "^0.12.0",
@@ -39,6 +40,7 @@
     "minimist": "^1.2.0",
     "prettier": "^2.7.1",
     "typescript": "^5.1.6",
+    "@types/node": "^16.4.7",
     "vite": "^4.3.0"
   }
 }
