--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "keywords": [],
   "engines": {
-    "node": ">=16.11.0"
+    "node": ">=18.12.0"
   },
   "author": "",
   "license": "ISC",
@@ -30,7 +30,7 @@
     "chalk": "^4.1.0",
     "magic-string": "^0.30.0",
     "execa": "^4.0.2",
-    "puppeteer": "~19.6.0",
+    "puppeteer": "~22.2.0",
     "rollup": "^3.26.0",
     "rollup-plugin-typescript2": "^0.34.1",
     "rollup-plugin-esbuild": "^5.0.0",
@@ -41,6 +41,7 @@
     "prettier": "^2.7.1",
     "typescript": "^5.1.6",
     "@types/node": "^16.4.7",
-    "vite": "^4.3.0"
+    "vite": "^5.1.4",
+    "vitest": "^1.3.1"
   }
 }
